Framework: Baseline with profile