@@ -9,6 +9,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Optional;
 
 @WebServlet(urlPatterns = {"/login"})
@@ -17,21 +18,23 @@ public class LoginServlet extends BaseServlet {
 
     @Override
     public void init() {
-        Path dataDir = Path.of(getServletContext().getRealPath("/WEB-INF/data"));
+        Path dataDir = Paths.get(getServletContext().getRealPath("/WEB-INF/data"));
         auth = new AuthService(dataDir);
     }
 
     @Override
-    protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+    protected void doGet(HttpServletRequest req, HttpServletResponse resp)
+            throws ServletException, IOException {
         req.getRequestDispatcher("/WEB-INF/jsp/login.jsp").forward(req, resp);
     }
 
     @Override
-    protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws IOException, ServletException {
-        String email = req.getParameter("email");
+    protected void doPost(HttpServletRequest req, HttpServletResponse resp)
+            throws ServletException, IOException {
+        String email    = req.getParameter("email");
         String password = req.getParameter("password");
         Optional<User> u = auth.login(email, password);
-        if (u.isEmpty()) {
+        if (!u.isPresent()) {
             req.setAttribute("error", "Invalid email or password");
             req.getRequestDispatcher("/WEB-INF/jsp/login.jsp").forward(req, resp);
             return;
