@@ -10,6 +10,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @WebServlet(urlPatterns = {"/profile"})
 public class ProfileServlet extends BaseServlet {
@@ -17,24 +18,28 @@ public class ProfileServlet extends BaseServlet {
 
     @Override
     public void init() {
-        Path dataDir = Path.of(getServletContext().getRealPath("/WEB-INF/data"));
+        Path dataDir = Paths.get(getServletContext().getRealPath("/WEB-INF/data"));
         profiles = new ProfileService(dataDir);
     }
 
     @Override
-    protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+    protected void doGet(HttpServletRequest req, HttpServletResponse resp)
+            throws ServletException, IOException {
         User u = currentUser(req);
         if (u == null) {
             resp.sendRedirect(req.getContextPath() + "/login");
             return;
         }
-        ApplicantProfile p = profiles.getByUserId(u.id).orElse(new ApplicantProfile(u.id));
+        ApplicantProfile p = profiles.getByUserId(u.id)
+                                     .orElse(new ApplicantProfile(u.id));
         req.setAttribute("profile", p);
+        req.setAttribute("user", u);
         req.getRequestDispatcher("/WEB-INF/jsp/profile.jsp").forward(req, resp);
     }
 
     @Override
-    protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws IOException, ServletException {
+    protected void doPost(HttpServletRequest req, HttpServletResponse resp)
+            throws ServletException, IOException {
         User u = currentUser(req);
         if (u == null) {
             resp.sendRedirect(req.getContextPath() + "/login");
@@ -42,10 +47,10 @@ public class ProfileServlet extends BaseServlet {
         }
         ApplicantProfile p = new ApplicantProfile(u.id);
         p.degreeProgramme = req.getParameter("degreeProgramme");
-        p.yearOfStudy = req.getParameter("yearOfStudy");
-        p.skills = req.getParameter("skills");
-        p.availability = req.getParameter("availability");
-        p.selfIntro = req.getParameter("selfIntro");
+        p.yearOfStudy     = req.getParameter("yearOfStudy");
+        p.skills          = req.getParameter("skills");
+        p.availability    = req.getParameter("availability");
+        p.selfIntro       = req.getParameter("selfIntro");
         profiles.upsert(p);
         resp.sendRedirect(req.getContextPath() + "/profile");
     }
